--- a/desafios/d012corrigido/estilo/style.css
+++ b/desafios/d012corrigido/estilo/style.css
@@ -17,7 +17,7 @@
 }
 
 html, body {
-    min-height: 100%vh;
+    min-height: 100vh;
     background-color: darkgray;
     font-family: var(--fonte1);
 }
